// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EmptyThreadIndicator rendering matches the snapshot when rendering all three types of indicators 1`] = `
<div
  style="display: contents;"
>
  <div
    class="timelineEmptyThreadIndicator"
  >
    <div
      class="timelineEmptyThreadIndicatorBlock timelineEmptyThreadIndicatorStartup"
      style="left: 0px; width: 0px;"
    />
    <div
      class="timelineEmptyThreadIndicatorBlock timelineEmptyThreadIndicatorShutdown"
      style="right: 0px; width: 0px;"
    />
    <div
      class="timelineEmptyThreadIndicatorBlock timelineEmptyThreadIndicatorEmptyBuffer"
      style="left: 0px; width: 0px;"
    />
  </div>
</div>
`;

exports[`EmptyThreadIndicator rendering matches the snapshot when rendering no indicators 1`] = `
<div
  style="display: contents;"
>
  <div
    class="timelineEmptyThreadIndicator"
  />
</div>
`;
